added missing dep

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "html-element-attributes"
-version = "0.1.0"
+version = "0.1.1"
 description = "List of known HTML tag attributes"
 authors = ["Christopher Pickering <cpickering@rhc.net>"]
 license="GPL-3.0-or-later"
@@ -12,6 +12,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.7"
+html5lib = "^1.1"
 
 
 [tool.poetry.dev-dependencies]
